feat: integrate modular hybrid search and standardize chunking pipeline

--- a/project/notebook-Copy1-backup.ipynb
+++ b/project/notebook-Copy1-backup.ipynb
@@ -403,7 +403,7 @@
     "    result = []\n",
     "    for i in range(0, n, step):\n",
     "        chunk = seq[i:i+size]\n",
-    "        result.append({'start': i, 'content': chunk})\n",
+    "        result.append({'start': i, 'chunk': chunk})\n",
     "        if i + size >= n:\n",
     "            break\n",
     "\n",
@@ -651,7 +651,7 @@
     "    sections = intelligent_chunking(doc_content)\n",
     "    for section in sections:\n",
     "        section_doc = doc_copy.copy()\n",
-    "        section_doc['content'] = section\n",
+    "        section_doc['section'] = section\n",
     "        task_manager_app_chunks.append(section_doc)"
    ]
   },
@@ -808,10 +808,10 @@
     }
    ],
    "source": [
-    "from search import Index\n",
+    "from minsearch import Index\n",
     "\n",
     "index = Index(\n",
-    "    text_fields=[\"content\", \"filename\"],\n",
+    "    text_fields=[\"chunk\", \"filename\"],\n",
     "    keyword_fields=[]\n",
     ")\n",
     "\n",
@@ -860,7 +860,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = record['content']\n",
+    "text = record['chunk']\n",
     "v_doc = embedding_model.encode(text)"
    ]
   },
@@ -896,13 +896,13 @@
    ],
    "source": [
     "from tqdm.auto import tqdm\n",
-    "from search import VectorSearch\n",
+    "from minsearch import VectorSearch\n",
     "import numpy as np\n",
     "\n",
     "task_manager_embeddings = []\n",
     "\n",
     "for d in tqdm(task_manager_app_chunks):\n",
-    "    v = embedding_model.encode(d['content'])\n",
+    "    v = embedding_model.encode(d['chunk'])\n",
     "    task_manager_embeddings.append(v)\n",
     "\n",
     "task_manager_embeddings = np.array(task_manager_embeddings)\n",
@@ -1105,7 +1105,7 @@
     "    sections = intelligent_chunking(doc_content)\n",
     "    for section in sections:\n",
     "        section_doc = doc_copy.copy()\n",
-    "        section_doc['content'] = section\n",
+    "        section_doc['section'] = section\n",
     "        task_manager_app_chunks.append(section_doc)"
    ]
   },
@@ -1164,7 +1164,7 @@
    "source": [
     "# Create text search index\n",
     "text_search = Index(\n",
-    "    text_fields=[\"content\", \"category\", \"topic\", \"filename\", \"content\"],\n",
+    "    text_fields=[\"chunk\", \"category\", \"topic\", \"filename\", \"section\"],\n",
     "    keyword_fields=[]\n",
     ")\n",
     "\n",
@@ -1356,7 +1356,7 @@
     "        print(f\"--- Result {i} ---\")\n",
     "        print(f\"Category: {result.get('category', 'N/A')}\")\n",
     "        print(f\"Topic: {result.get('topic', 'N/A')}\")\n",
-    "        print(f\"Content: {result['content'][:200]}...\\n\")\n",
+    "        print(f\"Content: {result['section'][:200]}...\\n\")\n",
     "    \n",
     "    return results\n",
     "\n",
@@ -1408,7 +1408,7 @@
     "\n",
     "for chunk in tqdm(task_manager_app_chunks, desc=\"Creating embeddings\"):\n",
     "    # Combine category, topic, and content for better context\n",
-    "    text = f\"{chunk.get('category', '')} {chunk.get('topic', '')} {chunk['content']}\"\n",
+    "    text = f\"{chunk.get('category', '')} {chunk.get('topic', '')} {chunk['section']}\"\n",
     "    v = embedding_model.encode(text)\n",
     "    embeddings.append(v)\n",
     "\n",
@@ -1573,7 +1573,7 @@
     "        print(f\"--- Result {i} ---\")\n",
     "        print(f\"Category: {result.get('category', 'N/A')}\")\n",
     "        print(f\"Topic: {result.get('topic', 'N/A')}\")\n",
-    "        print(f\"Content: {result['content'][:200]}...\\n\")\n",
+    "        print(f\"Content: {result['section'][:200]}...\\n\")\n",
     "    \n",
     "    return results\n",
     "\n",
@@ -1812,7 +1812,7 @@
     "    combined = []\n",
     "    \n",
     "    for result in text_results + vector_results:\n",
-    "        key = (result['content'], result['filename'])\n",
+    "        key = (result['section'], result['filename'])\n",
     "        if key not in seen:\n",
     "            seen.add(key)\n",
     "            combined.append(result)\n",
@@ -1825,7 +1825,7 @@
     "        print(f\"--- Result {i} ---\")\n",
     "        print(f\"Category: {result.get('category', 'N/A')}\")\n",
     "        print(f\"Topic: {result.get('topic', 'N/A')}\")\n",
-    "        print(f\"Content: {result['content'][:200]}...\\n\")\n",
+    "        print(f\"Content: {result['section'][:200]}...\\n\")\n",
     "    \n",
     "    return combined\n",
     "\n",
@@ -1967,14 +1967,14 @@
     "    print(\"\\n--- TEXT SEARCH ---\")\n",
     "    text_results = text_search.search(query, num_results=3)\n",
     "    for i, r in enumerate(text_results, 1):\n",
-    "        print(f\"{i}. [{r.get('category')}] {r['content'][:80]}...\")\n",
+    "        print(f\"{i}. [{r.get('category')}] {r['chunk'][:80]}...\")\n",
     "    \n",
     "    # Vector search\n",
     "    print(\"\\n--- VECTOR SEARCH ---\")\n",
     "    q = embedding_model.encode(query)\n",
     "    vector_results = vector_search.search(q, num_results=3)\n",
     "    for i, r in enumerate(vector_results, 1):\n",
-    "        print(f\"{i}. [{r.get('category')}] {r['content'][:80]}...\")\n",
+    "        print(f\"{i}. [{r.get('category')}] {r['chunk'][:80]}...\")\n",
     "    \n",
     "    # Hybrid search\n",
     "    print(\"\\n--- HYBRID SEARCH ---\")\n",
